--- a/index.html
+++ b/index.html
@@ -237,30 +237,25 @@ function generatePDF() {
             <p>GitHub: <a href="https://github.com/HiddevH" target="_blank">github.com/HiddevH</a></p>
         </div>
 
-        <div class="section summary">
-            <h2>Summary</h2>
-            <p>
-                <strong>Experienced Data Leader</strong> with a track record of building and leading high-performing data teams,
-                driving strategic initiatives, and delivering scalable cloud-native solutions.
-                I specialize in <strong>real-time data processing</strong>, <strong>event-driven architectures</strong>,
-                and platforms like <strong>Azure, Databricks, and Kafka</strong> to enable intelligent decision-making
-                and personalized customer experiences.
-            </p>
-            <p>
-                Passionate about <strong>mentoring teams, defining best practices, and bridging business and technology</strong> to maximize data-driven value.
-                With experience across <strong>iGaming, retail, e-commerce, and fintech</strong>, I bring a blend of <strong>technical expertise,
-                strategic vision, and leadership</strong> to scale data platforms, streamline operations, and ensure regulatory compliance.
-            </p>
-        </div>
+<div class="section summary">
+    <h2>Summary</h2>
+    <p>
+        Experienced Data Leader with over 7 years of expertise in building and scaling data platforms. Combining a robust technical foundation in Python with strategic vision, I specialize in real-time data processing and event-driven architectures.
+    </p>
+    <p>
+        Passionate about mentoring teams, defining best practices, and bridging business and technology to maximize data-driven value. With experience across iGaming, retail, e-commerce, and fintech, I bring a blend of technical depth, strategic thinking, and leadership to scale data platforms, streamline operations, and ensure regulatory compliance.
+    </p>
+</div>
 
         <div class="section skills">
             <h2>Key Skills</h2>
                 <ul>
-                    <li><strong>Cloud-Native Architecture & Event-Driven Systems</strong></li>
-                    <li><strong>Real-Time Data Processing & Streaming Analytics</strong></li>
-                    <li><strong>Data Governance, Security & Compliance (Wwft, KOA)</strong></li>
-                    <li><strong>Technical Leadership & Team Mentorship</strong></li>
-                    <li><strong>Strategic Planning & Stakeholder Management</strong></li>
+                    <li><strong>Cloud Platforms</strong> – Azure, Azure Functions, CosmosDB, Event Hubs</li>
+                    <li><strong>Real-Time Data Architecture</strong> – Event sourcing, streaming ingestion</li>
+                    <li><strong>Python (7+ years)</strong> – Data pipelines, orchestration, API integration, ML experimentation</li>
+                    <li><strong>PySpark & Databricks</strong> – Distributed processing, real-time compliance analytics</li>
+                    <li><strong>SQL & KQL</strong> – Querying, diagnostics, and observability on large-scale systems</li>
+                    <li><strong>Infrastructure as Code</strong> – Terraform for managing cloud infrastructure and CI/CD pipelines</li>
                 </ul>
         </div>
 
@@ -282,14 +277,14 @@ function generatePDF() {
 
             <div class="job-title">Lead Data Engineer & Platform Architect</div>
             <p><span class="date">September 2020 – September 2024</span></p>
-            <ul>
-                <li><strong>Fraud & Responsible Gaming Analytics:</strong> Developed real-time detection models for fraud, gambling addiction, and money laundering using Azure Data Explorer.</li>
-                <li><strong>Scalability Optimization:</strong> Engineered solutions to process tens of thousands of transactions per minute, reducing microtransaction load by 95% through one-minute aggregations.</li>
-                <li><strong>Leadership & Mentorship:</strong> Led a team of data engineers, defining best practices for event sourcing, streaming data processing, and real-time data modeling.</li>
-                <li><strong>System & Regulatory Compliance:</strong> Ensured compliance with the Anti-Money Laundering Act (Wwft) and the Remote Gambling Act (KOA), supporting regulatory audits and risk assessments.</li>
-                <li><strong>Performance & Latency Management:</strong> Maintained sub-second processing times for sportsbook and casino transactions, ensuring seamless real-time player monitoring.</li>
-                <li><strong>Strategic Data Initiatives:</strong> Advocated for self-service analytics and data democratization across departments.</li>
-            </ul>
+                <ul>
+                    <li><strong>Real-Time Data Engineering:</strong> Designed and developed real-time pipelines using Python and Azure Functions to support fraud detection, responsible gaming, and anti-money laundering (Wwft) use cases.</li>
+                    <li><strong>Compliance-Driven Architectures:</strong> Built scalable, event-driven data flows using CosmosDB and Databricks (PySpark), aligned with KOA and Wwft regulatory requirements.</li>
+                    <li><strong>Performance & Scalability:</strong> Optimized transaction throughput to handle tens of thousands of events per minute, reducing microtransaction load by 95% through smart Python-based aggregation techniques.</li>
+                    <li><strong>Engineering Leadership:</strong> Led and mentored a team of data engineers, establishing best practices for event sourcing, streaming ingestion, and real-time modeling — all within a Python-centric stack.</li>
+                    <li><strong>Monitoring & Latency:</strong> Delivered sub-second latency across systems, integrating telemetry and diagnostics via custom Python tools.</li>
+                    <li><strong>Data Democratization:</strong> Enabled self-service analytics through Python-powered ingestion and transformation pipelines.</li>
+                </ul>
 
             <!-- Hallmark Benelux Section -->
             <div class="company-header">
@@ -301,6 +296,7 @@ function generatePDF() {
             <ul>
                 <li><strong>Cloud Migration & Data Platform:</strong> Built a cloud-based data platform using Microsoft Azure for Data Science and BI reporting.</li>
                 <li><strong>Inventory Optimization:</strong> Developed a recommendation engine using Python to optimize inventory for seasonal sales across retail stores.</li>
+                <li><strong>Python development:</strong> Used Python extensively for recommendation engine development, data modeling, and pipeline orchestration supporting e-commerce performance insights.</li>
             </ul>
             <!-- Capgemini Section -->
             <div class="company-header">
@@ -314,6 +310,7 @@ function generatePDF() {
                 <ul>
                     <li><strong>Salesforce CDP Expertise:</strong> Developed expertise in Salesforce CDP as a strategic partner, creating a Center of Expertise on Customer Data Platforms.</li>
                     <li><strong>Data Engineering Solutions:</strong> Built data engineering pipelines using Python and SQL, optimizing web analytics and data platforms.</li>
+                    <li><strong>Python & SQL pipelines:</strong> Designed and implemented data workflows using Python and SQL for customer analytics, reporting automation, and web analytics optimization.</li>
                 </ul>
 
                 <li><strong>Client: ABN AMRO Bank N.V.</strong></li>
