--- a/index.html
+++ b/index.html
@@ -278,12 +278,12 @@ function generatePDF() {
             <div class="job-title">Lead Data Engineer & Platform Architect</div>
             <p><span class="date">September 2020 – September 2024</span></p>
                 <ul>
-                    <li><strong>Real-Time Data Engineering:</strong> Designed and developed real-time pipelines using Python and Azure Functions to support fraud detection, responsible gaming, and anti-money laundering (Wwft) use cases.</li>
+                    <li><strong>Real-Time Data Engineering:</strong> Designed and developed real-time pipelines using Azure Functions to support fraud detection, responsible gaming, and anti-money laundering (Wwft) use cases.</li>
                     <li><strong>Compliance-Driven Architectures:</strong> Built scalable, event-driven data flows using CosmosDB and Databricks (PySpark), aligned with KOA and Wwft regulatory requirements.</li>
-                    <li><strong>Performance & Scalability:</strong> Optimized transaction throughput to handle tens of thousands of events per minute, reducing microtransaction load by 95% through smart Python-based aggregation techniques.</li>
-                    <li><strong>Engineering Leadership:</strong> Led and mentored a team of data engineers, establishing best practices for event sourcing, streaming ingestion, and real-time modeling — all within a Python-centric stack.</li>
-                    <li><strong>Monitoring & Latency:</strong> Delivered sub-second latency across systems, integrating telemetry and diagnostics via custom Python tools.</li>
-                    <li><strong>Data Democratization:</strong> Enabled self-service analytics through Python-powered ingestion and transformation pipelines.</li>
+                    <li><strong>Performance & Scalability:</strong> Optimized transaction throughput to handle tens of thousands of events per minute, reducing microtransaction load by 95% using aggregation techniques in Python.</li>
+                    <li><strong>Engineering Leadership:</strong> Led and mentored a team of data engineers, establishing best practices for event sourcing, streaming ingestion, and real-time modeling within a Python-centric data platform.</li>
+                    <li><strong>Monitoring & Latency:</strong> Delivered sub-second latency across systems, integrating telemetry and diagnostics via custom lightweight tooling.</li>
+                    <li><strong>Data Democratization:</strong> Enabled self-service analytics through well-structured ingestion and transformation pipelines, with a focus on reliability and maintainability.</li>
                 </ul>
 
             <!-- Hallmark Benelux Section -->
