--- a/index.html
+++ b/index.html
@@ -278,11 +278,11 @@ function generatePDF() {
             <div class="job-title">Lead Data Engineer & Platform Architect</div>
             <p><span class="date">September 2020 – September 2024</span></p>
                 <ul>
+                    <li><strong>Engineering Leadership:</strong> Led and mentored a team of data engineers, establishing best practices for event sourcing, streaming ingestion, and real-time modeling within a Python-centric data platform.</li>
                     <li><strong>Real-Time Data Engineering:</strong> Designed and developed real-time pipelines using Azure Functions to support fraud detection, responsible gaming, and anti-money laundering (Wwft) use cases.</li>
                     <li><strong>Compliance-Driven Architectures:</strong> Built scalable, event-driven data flows using CosmosDB and Databricks (PySpark), aligned with KOA and Wwft regulatory requirements.</li>
-                    <li><strong>Performance & Scalability:</strong> Optimized transaction throughput to handle tens of thousands of events per minute, reducing microtransaction load by 95% using aggregation techniques in Python.</li>
-                    <li><strong>Engineering Leadership:</strong> Led and mentored a team of data engineers, establishing best practices for event sourcing, streaming ingestion, and real-time modeling within a Python-centric data platform.</li>
-                    <li><strong>Monitoring & Latency:</strong> Delivered sub-second latency across systems, integrating telemetry and diagnostics via custom lightweight tooling.</li>
+                    <li><strong>Scalability & Throughput Optimization:</strong> Enabled the processing of tens of thousands of transactions per minute by introducing efficient aggregation techniques, significantly reducing system load.</li>
+                    <li><strong>Performance & Latency Management:</strong> Maintained sub-second processing times for sportsbook and casino transactions, ensuring seamless real-time player monitoring.</li>
                     <li><strong>Data Democratization:</strong> Enabled self-service analytics through well-structured ingestion and transformation pipelines, with a focus on reliability and maintainability.</li>
                 </ul>
 
