--- a/resume.html
+++ b/resume.html
@@ -6,6 +6,99 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hidde van Heijst - Professional Resume</title>
     <style>
+        /* Mobile Styles for resume.html */
+        @media screen and (max-width: 768px) {
+            body {
+                background-color: #f4f4f4;
+                padding: 10px;
+            }
+
+            .container {
+                margin: 10px auto;
+                padding: 15px;
+                border-radius: 5px;
+            }
+
+            .header {
+                flex-direction: column;
+                text-align: center;
+                gap: 20px;
+            }
+
+            .header img {
+                width: 120px;
+                height: 120px;
+                order: -1;
+            }
+
+            .header h1 {
+                font-size: 1.8em;
+            }
+
+            .header p {
+                font-size: 1em;
+            }
+
+            h2 {
+                font-size: 1.3em;
+                margin-top: 25px;
+            }
+
+            .company-header {
+                flex-direction: column;
+                text-align: center;
+                gap: 10px;
+            }
+
+            .company-header img {
+                width: 40px;
+                margin: 0 auto;
+            }
+
+            .company-name {
+                font-size: 16px;
+            }
+
+            .job-title {
+                font-size: 14px;
+            }
+
+            .date {
+                font-size: 12px;
+                margin-top: 5px;
+            }
+
+            ul {
+                margin-left: 15px;
+            }
+
+            li {
+                line-height: 1.4;
+                margin-bottom: 5px;
+            }
+
+            .section {
+                margin-bottom: 25px;
+            }
+
+            /* Contact section mobile adjustments */
+            .contact-info p {
+                word-break: break-word;
+            }
+        }
+
+        /* Tablet styles for resume.html */
+        @media screen and (max-width: 1024px) and (min-width: 769px) {
+            .container {
+                max-width: 95%;
+                padding: 25px;
+            }
+
+            .header h1 {
+                font-size: 2.2em;
+            }
+        }
+
         @media print {
             body {
                 font-size: 10px;
@@ -130,6 +223,8 @@
             justify-content: space-between;
             padding-bottom: 20px;
             border-bottom: 2px solid #0056b3;
+            flex-wrap: wrap;
+            gap: 20px;
         }
 
         .header img {
@@ -137,6 +232,12 @@
             height: 150px;
             border-radius: 50%;
             object-fit: cover;
+            flex-shrink: 0;
+        }
+
+        .header-content {
+            flex: 1;
+            min-width: 300px;
         }
 
         .header h1 {
@@ -281,7 +382,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <div>
+            <div class="header-content">
                 <h1>Hidde van Heijst</h1>
                 <p><strong>Cloud Data Architect | Nederlandse Loterij</strong></p>
                 <p>Hilversum, North Holland, Netherlands</p>
