--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hidde van Heijst - Cloud Data Architect & Consultant</title>
+    <title>Hidde van Heijst - Cloud Data Architect</title>
     <style>
         /* Navigation Styles */
         .navbar {
@@ -580,7 +580,7 @@
     <!-- Hero Section -->
     <section id="home" class="hero">
         <div class="hero-content">
-            <h1>Cloud Data Architect & Consultant</h1>
+            <h1>Cloud Data Architect</h1>
             <p class="subtitle">Transforming businesses through scalable data platforms and real-time analytics</p>
             <p>Over 7 years of expertise in building enterprise-grade data solutions on Azure, specializing in
                 event-driven architectures and compliance-ready systems.</p>
