--- a/resume.html
+++ b/resume.html
@@ -103,7 +103,7 @@
 
         /* Screen Styles */
         body {
-            font-family: 'Georgia', 'Times New Roman', serif;
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', sans-serif;
             line-height: 1.5;
             margin: 0;
             padding: 0;
