--- a/index.html
+++ b/index.html
@@ -627,6 +627,7 @@
                     <ul style="text-align: left; margin-top: 20px;">
                         <li>AI & data strategy development</li>
                         <li>Team mentoring & leadership</li>
+                        <li>Agile product development (PSPO certified)</li>
                         <li>Self-service analytics enablement</li>
                         <li>Technology roadmapping</li>
                     </ul>
@@ -1089,48 +1090,29 @@
                 </div>
             </div>
 
-            <!-- Education & Certifications -->
-            <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 40px;">
+            <!-- Education -->
+            <div style="display: flex; justify-content: center;">
                 <div
-                    style="background: white; padding: 30px; border-radius: 10px; box-shadow: 0 5px 20px rgba(0,0,0,0.1);">
-                    <h3 style="color: #0056b3; margin-bottom: 25px; text-align: center;">🎓 Education</h3>
-                    <div style="margin-bottom: 20px;">
-                        <h4 style="margin: 0; color: #333; font-size: 1.1em;">MSc Business Information Management</h4>
-                        <p style="margin: 5px 0; color: #666;">Rotterdam School of Management, Erasmus University</p>
-                        <p style="margin: 0; color: #999; font-size: 0.9em;">2015 - 2016</p>
+                    style="background: white; padding: 40px; border-radius: 10px; box-shadow: 0 5px 20px rgba(0,0,0,0.1); max-width: 600px; width: 100%;">
+                    <h3 style="color: #0056b3; margin-bottom: 30px; text-align: center;">🎓 Education</h3>
+                    <div style="margin-bottom: 25px;">
+                        <h4 style="margin: 0; color: #333; font-size: 1.2em;">MSc Business Information Management</h4>
+                        <p style="margin: 5px 0; color: #666; font-weight: 600;">Rotterdam School of Management, Erasmus University</p>
+                        <p style="margin: 5px 0; color: #999; font-size: 0.95em;">2015 - 2016 • Grade: 8.0/10</p>
+                        <p style="margin: 10px 0 0 0; color: #555; font-size: 0.9em; line-height: 1.4;">
+                            Focus: Information Strategy, Big Data Management & Architecture, Business Applications Design. 
+                            Technical skills: Database modeling, advanced analytics, Java, R.
+                        </p>
                     </div>
                     <div>
-                        <h4 style="margin: 0; color: #333; font-size: 1.1em;">BSc Technology Management</h4>
-                        <p style="margin: 5px 0; color: #666;">University of Groningen</p>
-                        <p style="margin: 0; color: #999; font-size: 0.9em;">2010 - 2015</p>
+                        <h4 style="margin: 0; color: #333; font-size: 1.2em;">BSc Technology Management</h4>
+                        <p style="margin: 5px 0; color: #666; font-weight: 600;">University of Groningen</p>
+                        <p style="margin: 5px 0; color: #999; font-size: 0.95em;">2010 - 2015 • Grade: 7.0/10</p>
+                        <p style="margin: 10px 0 0 0; color: #555; font-size: 0.9em; line-height: 1.4;">
+                            Specialization: IT Architecture & Supply Chain Management. 
+                            Graduation thesis on organizational change management (Grade: 8.5/10).
+                        </p>
                     </div>
-                </div>
-
-                <div
-                    style="background: white; padding: 30px; border-radius: 10px; box-shadow: 0 5px 20px rgba(0,0,0,0.1);">
-                    <h3 style="color: #0056b3; margin-bottom: 25px; text-align: center;">🏆 Key Certifications</h3>
-                    <ul style="list-style: none; padding: 0; margin: 0;">
-                        <li style="margin-bottom: 12px; padding-left: 20px; position: relative;">
-                            <span style="position: absolute; left: 0; color: #0056b3;">✓</span>
-                            <strong>Certified Kubernetes Application Developer</strong><br>
-                            <span style="color: #666; font-size: 0.9em;">Linux Foundation</span>
-                        </li>
-                        <li style="margin-bottom: 12px; padding-left: 20px; position: relative;">
-                            <span style="position: absolute; left: 0; color: #0056b3;">✓</span>
-                            <strong>Scrum PSPO I Certificate</strong><br>
-                            <span style="color: #666; font-size: 0.9em;">Scrum.org</span>
-                        </li>
-                        <li style="margin-bottom: 12px; padding-left: 20px; position: relative;">
-                            <span style="position: absolute; left: 0; color: #0056b3;">✓</span>
-                            <strong>Data Science in Python</strong><br>
-                            <span style="color: #666; font-size: 0.9em;">DataCamp</span>
-                        </li>
-                        <li style="padding-left: 20px; position: relative;">
-                            <span style="position: absolute; left: 0; color: #0056b3;">✓</span>
-                            <strong>Salesforce DMP – Technical Track</strong><br>
-                            <span style="color: #666; font-size: 0.9em;">Salesforce, UK</span>
-                        </li>
-                    </ul>
                 </div>
             </div>
 
