--- a/resume.html
+++ b/resume.html
@@ -447,40 +447,33 @@
             <h2>Core Technical Skills</h2>
             <div class="skills-grid">
                 <div class="skill-category">
-                    <h4>AI/ML & Data Science</h4>
-                    <ul>
-                        <li>ML Production & MLOps</li>
-                        <li>Real-time ML inference</li>
-                        <li>AI governance & ethics</li>
-                        <li>Recommendation systems</li>
-                        <li>Model monitoring & optimization</li>
-                    </ul>
-                </div>
-                <div class="skill-category">
-                    <h4>Cloud Platforms</h4>
+                    <h4>Cloud & Data Platforms</h4>
                     <ul>
                         <li>Microsoft Azure (Expert)</li>
                         <li>Azure Functions, Event Hubs</li>
                         <li>CosmosDB, Databricks</li>
                         <li>Infrastructure as Code (Terraform)</li>
-                    </ul>
-                </div>
-                <div class="skill-category">
-                    <h4>Data Engineering</h4>
-                    <ul>
-                        <li>Python (7+ years)</li>
-                        <li>PySpark, Apache Spark</li>
-                        <li>SQL, KQL (Azure Data Explorer)</li>
                         <li>Event-driven architecture</li>
                     </ul>
                 </div>
                 <div class="skill-category">
-                    <h4>Leadership & Strategy</h4>
+                    <h4>Architecture & Leadership</h4>
                     <ul>
-                        <li>AI/ML team leadership</li>
+                        <li>Data platform architecture</li>
+                        <li>Team leadership & mentoring</li>
+                        <li>AI governance & strategy</li>
                         <li>Cross-functional collaboration</li>
-                        <li>Regulatory compliance (EU AI Act)</li>
-                        <li>Strategic AI vision & roadmaps</li>
+                        <li>Regulatory compliance (Wwft, KOA, EU AI Act)</li>
+                    </ul>
+                </div>
+                <div class="skill-category">
+                    <h4>AI/ML & Data Engineering</h4>
+                    <ul>
+                        <li>Python (7+ years), PySpark</li>
+                        <li>ML Operations</li>
+                        <li>Real-time data processing</li>
+                        <li>CI/CD (infrastructure, pipelines, applications)</li>
+                        <li>SQL, KQL (Azure Data Explorer)</li>
                     </ul>
                 </div>
             </div>
@@ -561,54 +554,28 @@
             </div>
         </div>
 
-        <div class="certifications-section">
-            <h2>Key Certifications</h2>
-            <div class="certifications-grid">
-                <div class="cert-item">
-                    <span class="cert-icon">🏆</span>
-                    <div>
-                        <strong>Certified Kubernetes Application Developer</strong><br>
-                        <small>Linux Foundation</small>
-                    </div>
-                </div>
-                <div class="cert-item">
-                    <span class="cert-icon">📊</span>
-                    <div>
-                        <strong>Data Science in Python</strong><br>
-                        <small>DataCamp</small>
-                    </div>
-                </div>
-                <div class="cert-item">
-                    <span class="cert-icon">⚡</span>
-                    <div>
-                        <strong>Salesforce DMP – Technical Track</strong><br>
-                        <small>Salesforce</small>
-                    </div>
-                </div>
-                <div class="cert-item">
-                    <span class="cert-icon">🎯</span>
-                    <div>
-                        <strong>Scrum PSPO I Certificate</strong><br>
-                        <small>Scrum.org</small>
-                    </div>
-                </div>
-            </div>
-        </div>
-
         <div class="education-section">
             <h2>Education</h2>
             <div class="education-grid">
                 <div class="education-item">
-                    <h4>Master of Science</h4>
+                    <h4>Master of Science (MSc)</h4>
                     <p class="degree">Business Information Management</p>
                     <p class="school">Rotterdam School of Management, Erasmus University</p>
-                    <p class="school">2015 - 2016</p>
+                    <p class="school">2015 - 2016 • Grade: 8.0/10</p>
+                    <p style="margin-top: 8px; font-size: 0.9em; color: #666;">
+                        Focus: Information Strategy, Big Data Management & Architecture, Business Applications Design. 
+                        Technical skills: Database modeling, advanced analytics, Java, R.
+                    </p>
                 </div>
                 <div class="education-item">
-                    <h4>Bachelor of Science</h4>
+                    <h4>Bachelor of Science (BSc)</h4>
                     <p class="degree">Technology Management</p>
                     <p class="school">University of Groningen</p>
-                    <p class="school">2010 - 2015</p>
+                    <p class="school">2010 - 2015 • Grade: 7.0/10</p>
+                    <p style="margin-top: 8px; font-size: 0.9em; color: #666;">
+                        Specialization: IT Architecture & Supply Chain Management. 
+                        Graduation thesis on organizational change management (Grade: 8.5/10).
+                    </p>
                 </div>
             </div>
         </div>
