--- a/index.html
+++ b/index.html
@@ -580,10 +580,10 @@
     <!-- Hero Section -->
     <section id="home" class="hero">
         <div class="hero-content">
-            <h1>Cloud Data Architect</h1>
-            <p class="subtitle">Transforming businesses through scalable data platforms and real-time analytics</p>
-            <p>Over 7 years of expertise in building enterprise-grade data solutions on Azure, specializing in
-                event-driven architectures and compliance-ready systems.</p>
+            <h1>Cloud Data & AI Architect</h1>
+            <p class="subtitle">Transforming businesses through scalable data platforms, AI strategy, and real-time analytics</p>
+            <p>Over 7 years of expertise in building enterprise-grade data and AI solutions on Azure, specializing in
+                event-driven architectures, ML operations, and compliance-ready systems.</p>
             <a href="#contact" class="cta-button">Let's Build Something Amazing</a>
         </div>
     </section>
@@ -602,6 +602,7 @@
                         <li>Azure Functions & Event Hubs</li>
                         <li>CosmosDB & Databricks</li>
                         <li>Real-time analytics pipelines</li>
+                        <li>ML Operations</li>
                         <li>Infrastructure as Code (Terraform)</li>
                     </ul>
                 </div>
@@ -652,7 +653,7 @@
                     <p>Ensure your data platform meets regulatory requirements. Expertise in financial services
                         compliance, GDPR, and anti-money laundering systems.</p>
                     <ul style="text-align: left; margin-top: 20px;">
-                        <li>Regulatory compliance (KOA, Wwft)</li>
+                        <li>Regulatory compliance (KOA, Wwft, EU AI Act)</li>
                         <li>Data governance frameworks</li>
                         <li>Audit-ready architectures</li>
                         <li>Risk management systems</li>
@@ -682,7 +683,7 @@
             <div style="display: grid; grid-template-columns: 2fr 1fr; gap: 40px; align-items: center;">
                 <div>
                     <p style="font-size: 1.1em; line-height: 1.8;">
-                        I'm a passionate data leader with over 7 years of experience transforming businesses through
+                        I'm a passionate data and AI leader with over 7 years of experience transforming businesses through
                         innovative data solutions. Currently serving as Cloud Data Architect at Nederlandse Loterij, I
                         specialize in building scalable, real-time data platforms that drive business value while
                         ensuring regulatory compliance.
@@ -722,7 +723,7 @@
                         <img src="images/nederlandse_loterij_logo.png" alt="Nederlandse Loterij" class="case-study-logo">
                         <div>
                             <h3 style="color: #0056b3; margin: 0 0 15px 0;">Real-Time Data Platform for Gaming
-                                Compliance</h3>
+                                Compliance & Personalization</h3>
                             <p style="color: #666; margin-bottom: 20px; font-weight: 500;">Nederlandse Loterij • 2024
                             </p>
 
@@ -741,7 +742,7 @@
                                         <li>Designed event-driven architecture with Azure Functions, Event Hubs and
                                             CosmosDB</li>
                                         <li>Implemented real-time analytics using Azure Data Explorer (KQL)</li>
-                                        <li>Trained ML models on Databricks for real-time deployment</li>
+                                        <li>Trained ML models on Databricks for real-time deployment and personalization</li>
                                         <li>Created efficient aggregation techniques to reduce system load</li>
                                     </ul>
                                 </div>
@@ -751,7 +752,7 @@
                                         <li><strong>Sub-second processing</strong> for all sportsbook and casino
                                             transactions</li>
                                         <li><strong>99.9% uptime</strong> during peak gaming events</li>
-                                        <li><strong>50% reduction</strong> in system load through optimized aggregations
+                                        <li><strong>95% reduction</strong> in system load through optimized aggregations
                                         </li>
                                         <li><strong>Full compliance</strong> with KOA and Wwft regulations</li>
                                     </ul>
@@ -803,7 +804,7 @@
                                     <h4 style="color: #333; margin: 0 0 15px 0;">Solution</h4>
                                     <ul style="margin: 0; padding-left: 20px; line-height: 1.8;">
                                         <li>Built cloud-based data platform on Microsoft Azure</li>
-                                        <li>Developed Python-based recommendation engine</li>
+                                        <li>Developed Python-based ML recommendation engine</li>
                                         <li>Implemented machine learning models for demand forecasting</li>
                                         <li>Created self-service BI dashboards for store managers</li>
                                     </ul>
@@ -1046,7 +1047,7 @@
                         style="display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 20px; margin-top: 20px;">
                         <div style="background: #f8f9fa; padding: 20px; border-radius: 8px;">
                             <strong>Team Leadership</strong><br>
-                            <span style="color: #666;">Led and mentored data engineering team, established best
+                            <span style="color: #666;">Built and led cross-functional data engineering team, established best
                                 practices</span>
                         </div>
                         <div style="background: #f8f9fa; padding: 20px; border-radius: 8px;">
@@ -1062,7 +1063,7 @@
                     </div>
                 </div>
 
-                <!-- Other key positions -->
+                <!-- Other positions and education -->
                 <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 30px;">
                     <div style="border: 1px solid #ddd; padding: 25px; border-radius: 8px;">
                         <div style="display: flex; align-items: center; gap: 15px; margin-bottom: 15px;">
@@ -1088,26 +1089,24 @@
                             for ABN AMRO, Python & SQL pipeline development</p>
                     </div>
                 </div>
-            </div>
 
-            <!-- Education -->
-            <div style="display: flex; justify-content: center;">
-                <div
-                    style="background: white; padding: 40px; border-radius: 10px; box-shadow: 0 5px 20px rgba(0,0,0,0.1); max-width: 600px; width: 100%;">
-                    <h3 style="color: #0056b3; margin-bottom: 30px; text-align: center;">🎓 Education</h3>
-                    <div style="margin-bottom: 25px;">
-                        <h4 style="margin: 0; color: #333; font-size: 1.2em;">MSc Business Information Management</h4>
-                        <p style="margin: 5px 0; color: #666; font-weight: 600;">Rotterdam School of Management, Erasmus University</p>
-                        <p style="margin: 5px 0; color: #999; font-size: 0.95em;">2015 - 2016 • Grade: 8.0/10</p>
+                <!-- Education Section -->
+                <h3 style="color: #0056b3; margin: 40px 0 30px 0; text-align: center;">🎓 Education</h3>
+                <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 30px;">
+                    <div style="border: 1px solid #ddd; padding: 25px; border-radius: 8px;">
+                        <h4 style="margin: 0 0 10px 0; color: #333; font-size: 1.1em;">MSc Business Information Management</h4>
+                        <p style="margin: 5px 0; color: #0056b3; font-weight: 600;">Rotterdam School of Management, Erasmus University</p>
+                        <p style="margin: 5px 0; color: #666; font-size: 0.9em;">2015 - 2016 • Grade: 8.0/10</p>
                         <p style="margin: 10px 0 0 0; color: #555; font-size: 0.9em; line-height: 1.4;">
                             Focus: Information Strategy, Big Data Management & Architecture, Business Applications Design. 
                             Technical skills: Database modeling, advanced analytics, Java, R.
                         </p>
                     </div>
-                    <div>
-                        <h4 style="margin: 0; color: #333; font-size: 1.2em;">BSc Technology Management</h4>
-                        <p style="margin: 5px 0; color: #666; font-weight: 600;">University of Groningen</p>
-                        <p style="margin: 5px 0; color: #999; font-size: 0.95em;">2010 - 2015 • Grade: 7.0/10</p>
+                    
+                    <div style="border: 1px solid #ddd; padding: 25px; border-radius: 8px;">
+                        <h4 style="margin: 0 0 10px 0; color: #333; font-size: 1.1em;">BSc Technology Management</h4>
+                        <p style="margin: 5px 0; color: #0056b3; font-weight: 600;">University of Groningen</p>
+                        <p style="margin: 5px 0; color: #666; font-size: 0.9em;">2010 - 2015 • Grade: 7.0/10</p>
                         <p style="margin: 10px 0 0 0; color: #555; font-size: 0.9em; line-height: 1.4;">
                             Specialization: IT Architecture & Supply Chain Management. 
                             Graduation thesis on organizational change management (Grade: 8.5/10).
